@@ -1,6 +1,8 @@
 IF (OPENGL_FOUND OR AGL_FOUND)
   SET (USE_OPENGL 1)
   PLUGIN_INCLUDE_DIRECTORIES (${OPENGL_INCLUDE_DIR})
+ELSE ()
+  PLUGIN_DISABLE ()
 ENDIF ()
 
 IF (OPENGL_FOUND)
