@@ -29,10 +29,12 @@ INCLUDE (FindPkgConfig)
 FIND_PACKAGE (X11)
 LIST (REMOVE_DUPLICATES X11_INCLUDE_DIR)
 
-FIND_PACKAGE (OpenGL)
-LIST (REMOVE_DUPLICATES OPENGL_INCLUDE_DIR)
+IF (NOT without-gl)
+  FIND_PACKAGE (OpenGL)
+  LIST (REMOVE_DUPLICATES OPENGL_INCLUDE_DIR)
+ENDIF ()
 
-IF (APPLE)
+IF (APPLE AND NOT without-gl)
   SET (AGL_FOUND	${OPENGL_FOUND})
   SET (AGL_INCLUDE_DIR	${OPENGL_INCLUDE_DIR})
   SET (AGL_LIBRARIES	${OPENGL_LIBRARIES})
@@ -48,7 +50,7 @@ IF (APPLE)
   ELSE (X11_FOUND)
     SET (OPENGL_FOUND)
   ENDIF (X11_FOUND)
-ENDIF (APPLE)
+ENDIF (APPLE AND NOT without-gl)
 
 # FOREACH (var AGL_FOUND AGL_INCLUDE_DIR AGL_LIBRARIES OPENGL_FOUND OPENGL_INCLUDE_DIR OPENGL_LIBRARIES)
 #   MESSAGE ("${var} = ${${var}}")
